-- MySQL Script generated by MySQL Workbench
-- Wed Apr 24 11:58:47 2019
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema mydb
-- -----------------------------------------------------
-- -----------------------------------------------------
-- Schema legohouse
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema legohouse
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `legohouse` DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci ;
-- -----------------------------------------------------
-- Schema fogcarport
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema fogcarport
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `fogcarport` DEFAULT CHARACTER SET utf8 COLLATE utf8_danish_ci ;
USE `legohouse` ;

-- -----------------------------------------------------
-- Table `legohouse`.`user`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `legohouse`.`user` (
  `id` INT(11) NOT NULL AUTO_INCREMENT,
  `email` VARCHAR(90) NOT NULL,
  `password` VARCHAR(45) NOT NULL,
  `role` VARCHAR(20) NOT NULL DEFAULT 'customer',
  PRIMARY KEY (`id`),
  UNIQUE INDEX `email_UNIQUE` (`email` ASC) VISIBLE)
ENGINE = InnoDB
AUTO_INCREMENT = 7
DEFAULT CHARACTER SET = latin1;


-- -----------------------------------------------------
-- Table `legohouse`.`order`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `legohouse`.`order` (
  `id` INT(11) NOT NULL AUTO_INCREMENT,
  `user_id` INT(11) NULL DEFAULT NULL,
  `date` DATETIME NULL DEFAULT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_userID` (`user_id` ASC) VISIBLE,
  CONSTRAINT `fk_userID`
    FOREIGN KEY (`user_id`)
    REFERENCES `legohouse`.`user` (`id`)
    ON DELETE SET NULL)
ENGINE = InnoDB
AUTO_INCREMENT = 1101
DEFAULT CHARACTER SET = latin1;


-- -----------------------------------------------------
-- Table `legohouse`.`odetail`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `legohouse`.`odetail` (
  `id` INT(11) NOT NULL AUTO_INCREMENT,
  `order_id` INT(11) NOT NULL,
  `height` INT(11) NOT NULL,
  `width` INT(11) NOT NULL,
  `length` INT(11) NOT NULL,
  `qty` INT(11) NOT NULL,
  `price` DOUBLE NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_orderID` (`order_id` ASC) VISIBLE,
  CONSTRAINT `fk_orderID`
    FOREIGN KEY (`order_id`)
    REFERENCES `legohouse`.`order` (`id`)
    ON DELETE CASCADE)
ENGINE = InnoDB
AUTO_INCREMENT = 2
DEFAULT CHARACTER SET = latin1;


-- -----------------------------------------------------
-- Table `legohouse`.`users`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `legohouse`.`users` (
  `email` VARCHAR(45) NOT NULL,
  `admin` TINYINT(4) NULL DEFAULT '0',
  `password` VARCHAR(45) NOT NULL,
  PRIMARY KEY (`email`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


-- -----------------------------------------------------
-- Table `legohouse`.`orders`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `legohouse`.`orders` (
  `order_id` INT(10) NOT NULL AUTO_INCREMENT,
  `width` INT(10) NOT NULL,
  `length` INT(10) NOT NULL,
  `height` INT(10) NOT NULL,
  `bandType` VARCHAR(45) NULL DEFAULT NULL,
  `email` VARCHAR(45) NOT NULL,
  `isShipped` TINYINT(4) NULL DEFAULT '0',
  PRIMARY KEY (`order_id`),
  INDEX `email` (`email` ASC) VISIBLE,
  CONSTRAINT `orders_ibfk_1`
    FOREIGN KEY (`email`)
    REFERENCES `legohouse`.`users` (`email`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;

USE `fogcarport` ;

-- -----------------------------------------------------
-- Table `fogcarport`.`components`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `fogcarport`.`components` (
  `component_id` INT(11) NOT NULL,
  `name` VARCHAR(45) NOT NULL,
  `description` VARCHAR(100) NULL DEFAULT NULL,
  `height` INT(10) UNSIGNED NOT NULL,
  `width` INT(10) UNSIGNED NOT NULL,
  `length` INT(10) UNSIGNED NOT NULL,
  `price` FLOAT UNSIGNED NOT NULL,
  PRIMARY KEY (`component_id`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8
COLLATE = utf8_danish_ci;


-- -----------------------------------------------------
-- Table `fogcarport`.`bills_of_material`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `fogcarport`.`bills_of_material` (
  `bill_id` INT(11) NOT NULL,
  `component_id` INT(11) NOT NULL,
  `amount` INT(11) NULL DEFAULT '1',
  PRIMARY KEY (`bill_id`, `component_id`),
  INDEX `components_fk` (`component_id` ASC) VISIBLE,
  CONSTRAINT `components_fk`
    FOREIGN KEY (`component_id`)
    REFERENCES `fogcarport`.`components` (`component_id`)
    ON DELETE CASCADE)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8
COLLATE = utf8_danish_ci;


-- -----------------------------------------------------
-- Table `fogcarport`.`customers`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `fogcarport`.`customers` (
  `customer_id` INT(11) NOT NULL,
  `name` VARCHAR(45) NOT NULL,
  `email_address` VARCHAR(45) NOT NULL,
  `password` VARCHAR(45) NOT NULL,
  `phone_number` INT(10) UNSIGNED NOT NULL,
  PRIMARY KEY (`customer_id`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8
COLLATE = utf8_danish_ci;


-- -----------------------------------------------------
-- Table `fogcarport`.`employees`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `fogcarport`.`employees` (
  `employee_id` INT(11) NOT NULL,
  `name` VARCHAR(45) NOT NULL,
  `email_address` VARCHAR(45) NOT NULL,
  `password` VARCHAR(45) NOT NULL,
  `phone_number` INT(10) UNSIGNED NOT NULL,
  `rank` ENUM('storeworker', 'salesperson', 'admin', 'superadmin') NOT NULL,
  PRIMARY KEY (`employee_id`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8
COLLATE = utf8_danish_ci;


-- -----------------------------------------------------
-- Table `fogcarport`.`orders`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `fogcarport`.`orders` (
  `order_id` INT(11) NOT NULL,
  `customer_id` INT(11) NOT NULL,
  `bill_id` INT(11) NOT NULL,
  `customer_address` VARCHAR(60) NOT NULL,
  `order_receive_date` DATE NOT NULL,
  `order_status` ENUM('pending', 'sent') NULL DEFAULT 'pending',
  `order_send_date` DATE NULL DEFAULT NULL,
  PRIMARY KEY (`order_id`),
  INDEX `customers_fk` (`customer_id` ASC) VISIBLE,
  INDEX `bills_fk` (`bill_id` ASC) VISIBLE,
  CONSTRAINT `bills_fk`
    FOREIGN KEY (`bill_id`)
    REFERENCES `fogcarport`.`bills_of_material` (`bill_id`)
    ON DELETE CASCADE,
  CONSTRAINT `customers_fk`
    FOREIGN KEY (`customer_id`)
    REFERENCES `fogcarport`.`customers` (`customer_id`)
    ON DELETE CASCADE)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8
COLLATE = utf8_danish_ci;


-- -----------------------------------------------------
-- Table `fogcarport`.`cases`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `fogcarport`.`cases` (
  `case_id` INT(11) NOT NULL,
  `order_id` INT(11) NOT NULL,
  `customer_id` INT(11) NOT NULL,
  `employee_id` INT(11) NOT NULL,
  `order_status` ENUM('open', 'closed') NULL DEFAULT 'open',
  PRIMARY KEY (`case_id`, `order_id`),
  INDEX `orders_fk` (`order_id` ASC) VISIBLE,
  INDEX `customers_fk2` (`customer_id` ASC) VISIBLE,
  INDEX `employees_fk` (`employee_id` ASC) VISIBLE,
  CONSTRAINT `customers_fk2`
    FOREIGN KEY (`customer_id`)
    REFERENCES `fogcarport`.`customers` (`customer_id`)
    ON DELETE CASCADE,
  CONSTRAINT `employees_fk`
    FOREIGN KEY (`employee_id`)
    REFERENCES `fogcarport`.`employees` (`employee_id`)
    ON DELETE CASCADE,
  CONSTRAINT `orders_fk`
    FOREIGN KEY (`order_id`)
    REFERENCES `fogcarport`.`orders` (`order_id`)
    ON DELETE CASCADE)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8
COLLATE = utf8_danish_ci;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
